--- a/src/components/CertificationSection/CertificationSection.css
+++ b/src/components/CertificationSection/CertificationSection.css
@@ -90,3 +90,10 @@
     text-align: center;
     line-height: 1.2;
 }
+
+@media(min-width: 1367px){
+    .certification{
+        width: 55vw;
+        margin-left: 410px;
+    }
+}
