--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,8 +1,7 @@
-
 .hero {
     position: relative;
     width: 100%;
-    height: 100vh; 
+    height: 97vh; /* Reduced height */
     overflow: hidden;
 }
 
@@ -11,54 +10,49 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: auto;
+    height: 100%;
     object-fit: cover;
     z-index: -1;
 }
 
-.hero-image{
+.hero-image {
     display: none;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: auto;
+    height: 100%;
     object-fit: cover;
     z-index: -1;
 }
 
 .hero-content {
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
     z-index: 2;
     color: white;
     text-align: center;
+    transform: translate(-50%, -50%); 
+    max-width: 900px; /* Keeps text readable */
     padding: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    margin: 0px 164px;
-    font-size: 17px;
-    font-family: 'Open sans' , sans-serif;
 }
-  
-.hero-content h1{
-    font-size: 60px;
+
+.hero-content h1 {
+    font-size: clamp(40px, 5vw, 60px); /* Responsive heading */
     color: #fffffa;
     text-transform: none;
     margin: 0px;
     box-sizing: border-box;
 }
 
-.hero-content p{
-    box-sizing: border-box;
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    unicode-bidi: isolate;
+.hero-content p {
+    margin-top: 1em;
+    margin-bottom: 1em;
 }
 
 .hero:before {
@@ -101,3 +95,41 @@
     margin-right: 5px;
 }
 
+@media (max-width: 1366px) {
+    .hero{
+        height: 97vh;
+    }
+    .hero-content h1{
+        font-family: Roboto, sans-serif;
+        font-size: 60px;
+        font-weight: 700;
+        line-height: 66px;
+        color: rgba(255, 255, 255, 0.98);
+        width: 990px;
+    }
+}
+
+@media(min-width: 1367px){
+    .hero{
+        height: 65vh;
+    }
+    .hero-content h1{
+        font-family: Roboto, sans-serif;
+        font-size: 60px;
+        font-weight: 700;
+        line-height: 66px;
+        color: rgba(255, 255, 255, 0.98);
+        width: 990px;
+        /* max-width: 990px !important; */
+    }
+}
+
+@media (max-width: 921px) {
+    .hero {
+        height: 60vh; /* Further reduce height on mobile */
+    }
+    .hero-content {
+        padding-left: 4vw;
+        padding-right: 4vw;
+    }
+}
