--- a/src/components/TopHeader/TopHeader.css
+++ b/src/components/TopHeader/TopHeader.css
@@ -117,41 +117,32 @@
       display: none;
     }
   }
+
+  @media(max-width: 1366px){
+    .topheader{
+      display: block;
+      width: 100%;
+    }
+    .social-media{
+      margin-left: -30px;
+    }
+    .c-info{
+      margin-right: -5px;
+    }
+  }
   
-  @media (min-width: 1024px) {
+  @media (min-width: 1367px) {
     .topheader {
       display: block;
       width: 100%;
     }
     .social-media {
       padding-left: 60px;
+      margin-left: -350px;
     }
     .c-info {
-      padding-right: 50px;
-    }
-  }
-  
-  @media (min-width: 1280px) {
-    .topheader {
-      width: 100%;
-      height: 40px;
-    }
-    .social-media img {
-      width: 13px;
-      height: 13px;
-      margin-top: -5px;
-    }
-    .c-info {
-      margin-right: -100px;
-      height: 0.5px;
-      margin-top: -20px;
-    }
-    .c-info img {
-      width: 12px;
-    }
-    .c-info span {
-      font-size: 12px;
-      font-family: 'Open Sans', sans-serif;
+      margin-left: 300px;
+      margin-right: -290px;
     }
   }
   
