--- a/src/components/CaseSection/CaseSection.css
+++ b/src/components/CaseSection/CaseSection.css
@@ -218,3 +218,42 @@
     justify-content: space-between;
     
 }
+
+@media(min-width: 1367px){
+    .casestd-text{
+        margin-left: 300px;
+        width: 30vw;
+    }
+    .casestd-text p{
+        font-family: "Open Sans", sans-serif;
+        font-size: 17px;
+        font-weight: 400;
+        line-height: 28.9px;
+        color: rgb(75, 79, 88);
+    }
+    .grp1-txt{
+        margin-left: 300px;
+        width: 100%;
+    }
+    .grp2-txt{
+        margin-right: 270px;
+        width: 100%;
+        max-width: 600px;
+    }
+    .grp2-txt p{
+        font-family: "Open Sans", sans-serif;
+        font-size: 17px;
+        font-weight: 400;
+        line-height: 28.9px;
+        color: rgb(75, 79, 88);
+        padding-top: 20px;
+    }
+    .grp2-img{
+        margin-left: 290px;
+        width: 100%;
+    }
+    .grp2-img img{
+        max-width: 630px;
+        width: 100%;
+    }
+}
