--- a/src/components/IndSection/IndSection.css
+++ b/src/components/IndSection/IndSection.css
@@ -40,7 +40,7 @@
     background-color: white;
     box-shadow: 0 12px 30px rgba(0, 0, 0, 0.1);
     border-radius: 15px;
-    width: 170px;
+    max-width: 170px;
 }
 
 .ind-images img {
@@ -55,4 +55,45 @@
     font-size: 17px;
     font-family: 'Open Sans', sans-serif;
     color: #4B4F58;
+}
+
+@media(min-width: 1367px){
+    .text{
+        margin-left: 300px;
+        margin-right: 350px;
+    }
+    .text h2{
+        font-family: Roboto, sans-serif;
+        font-size: 40px;
+        font-weight: 700;
+        line-height: 40px;
+        color: rgb(2, 15, 66);
+    }
+    .text p{
+        font-family: "Open Sans", sans-serif;
+        font-size: 17px;
+        font-weight: 400;
+        line-height: 28.9px;
+        color: rgb(75, 79, 88);
+    }
+    .ind-images{
+        margin-left: 240px;
+        margin-right: 700px;
+        width: 60vw;
+    }
+    .ind-images .img1, .ind-images .img2, .ind-images .img3, 
+    .ind-images .img4, .ind-images .img5, .ind-images .img6, 
+    .ind-images .img7, .ind-images .img8, .ind-images .img9, 
+    .ind-images .img10{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 200px;
+        background-color: white;
+        box-shadow: 0 12px 30px rgba(0, 0, 0, 0.1);
+        border-radius: 15px;
+        max-width: calc(100% - 1029px);
+        width: 100%;
+    }
 }
