--- a/src/components/ServicesSection/ServicesSection.css
+++ b/src/components/ServicesSection/ServicesSection.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   position: relative;
   gap: 20px;
-  margin-bottom: 70px;
+  margin-bottom: 190px;
 }
 
 .services::before {
@@ -15,7 +15,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 750px;
+  height: 860px;
   background: url('https://speedlinkng.com/wp-content/uploads/2022/09/background-1.png');
   background-size: cover;
   background-position: center;
@@ -29,8 +29,8 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 750px;
-  background-color: rgba(211, 211, 211, 0.5);
+  height: 860px;
+  background-color: rgba(245, 241, 241, 0.5);
   z-index: 0;
 }
 
@@ -40,8 +40,13 @@
 }
 
 .ser-txt h2 {
-  color: #020d39;
   font-family: 'Roboto', sans-serif;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 40px;
+  color: rgb(2, 13, 57);
+  margin-bottom: 0;
+  margin-top: 80px;
 }
 
 .ser-txt p {
@@ -98,6 +103,10 @@
   gap: 30px;
 }
 
+.ser-list{
+  margin-top: 20px;
+}
+
 .ser-list ul {
   list-style: none;
   padding: 0;
@@ -144,7 +153,7 @@
   position: relative;
   width: 900px;
   height: 475px;
-  margin-top: 25px;
+  margin-top: 45px;
   margin-left: 10px;
 }
 
@@ -152,14 +161,15 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 740px;
-  height: 100%;
+  width: 700px;
+  height: 460px;
   background-size: cover;
   background-position: center;
-  border-radius: 10px;
+  border-radius: 20px;
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.3s ease, visibility 0.3s ease;
+  margin-bottom: -2000px;
 }
 
 .ser-image.visible {
@@ -176,7 +186,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  padding-bottom: 20px; 
+  margin-top: -70px;
 }
 
 .ser-image h3 {
@@ -208,14 +218,17 @@
   padding: 6px 12px; 
   background-image: linear-gradient(90deg, #30C6DEB8 0%, #3AA2F0C9 100%);
   border: none;
-  color: white;
-  font-weight: 549;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  font-size: 14px;
-  width: 180px;
-  height: 50px;
+  width: 200px;
+  height: 63px;
+  font-family: "Open Sans", sans-serif;
+  font-size: 15px;
+  font-weight: 550;
+  line-height: 15px;
+  color: rgb(255, 255, 255);
+  margin-bottom: -20px;
 }
 
 .ser-image button:hover {
@@ -228,4 +241,53 @@
   height: auto;
   vertical-align: middle;
   margin-left: 5px;
+}
+
+@media(min-width: 1367px){
+  .services{
+    height: 900px; 
+    margin-bottom: -50px;
+  }
+  .services::before{
+    height: 800px;
+  }
+  .services::after{
+    height: 800px;
+  }
+  .ser-txt{
+    margin-left: 310px;
+  }
+  .ser-txt h1{
+    font-family: "Open Sans", sans-serif;
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 28.9px;
+    color: rgb(75, 79, 88);
+  }
+  .ser-txt p{
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: normal;
+    color: rgb(0, 0, 0);
+  }
+  .ser-txt1 button{
+    margin-right: 320px;
+  }
+  .ser-list{
+    margin-left: 310px;
+  }
+  .ser-list ul li a{
+    font-family: "Nexa Bold", sans-serif;
+    font-size: 20px;
+    font-weight: 900;
+    line-height: 28.5714px;
+    color: #000;
+  }
+  .ser-images{
+    margin-right: 600px;
+  }
+  .ser-image{
+    width: 750px;
+  }
 }
