--- a/src/components/CaseSection/CaseSection.css
+++ b/src/components/CaseSection/CaseSection.css
@@ -11,34 +11,40 @@
     font-size: 57px;
     font-family: 'Roboto', sans-serif;
     color: #000;
-    padding-left: 100px;
+    padding-left: 125px;
 }
 
 .casestd-text p{
+    padding-left: 125px;
+    width: 100%;
+    max-width: 510px;
+    font-family: "Open Sans", sans-serif;
     font-size: 17px;
-    margin: 0px 0px 8.5px;
-    font-family: 'Open sans' , sans-serif;
-    color: #4B4F58;
-    padding-left: 100px;
+    font-weight: 400;
+    line-height: 28.9px;
+    color: rgb(75, 79, 88);
+    margin-top: -20px;
 }
 
 .btn{
     padding-top: 175px;
     padding-right: 150px;
-    align-items: baseline;
-    
+    align-items: baseline;  
 }
 
 .btn1{
-    height: 50px;
+    height: 60px;
     max-width: 240px;
     width: 100%;
-    font-size: 16px;
-    font-weight: 400;
     background-color: #B41E24;
     border: none;
-    border-radius: 5px;
-    color: white;
+    border-radius: 6px;
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26.3568px;
+    color: rgb(255, 255, 255);
+    margin-top: -20px;
 }
 
 .btn :hover{
@@ -62,23 +68,31 @@
     padding: 100px;
     width: 1130px;
     margin-bottom: -100px;
+    margin-top: -30px;
 }
 
 .grp1-txt{
     background-color: transparent;
     border-radius: 10px;
     background-image: linear-gradient(180deg, #F9EDED 0%, #F8CCD7 100%);
-    max-width: 600px;
+    max-width: 560px;
     width: 100%;
+    height: 70vh;
     margin-top: -35px;
     margin-bottom: -35px;
+    margin-left: 10px;
 }
 
 .grp1-txt h2{
     padding-left: 50px;
     padding-top: 20px;
+    width: 100%;
+    max-width: 470px;
+    font-family: Roboto, sans-serif;
     font-size: 40px;
-    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    line-height: 40px;
+    color: rgb(34, 34, 34);
 }
 
 .grp1-txt p{
@@ -88,16 +102,17 @@
     margin: 0px 0px 8.5px;
     line-height: 2;
     color: #4B4F58;
+    width: 100%;
+    max-width: 440px;
 }
 
 .btn2{
-    height: 50px;
-    max-width: 200px;
+    height: 45px;
+    max-width: 190px;
     width: 100%;
-    font-size: 16px;
     padding-left: 20px;
     background-color: #000;
-    border-radius: 8px;
+    border-radius: 5px;
     border: none;
    
 }
@@ -107,16 +122,22 @@
 }
 
 .btn2 img{
-    max-width: 10px;
+    max-width: 15px;
     width: 100%;
     height: auto;
     padding-left: 10px;
+    margin-bottom: -2px;
 }
 
 .btn2 a {
     text-decoration: none;
     color: white;
     padding-bottom: 2px;
+    font-family: "Open Sans", sans-serif;
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 15px;
+    color: rgb(255, 255, 255);
 }
 
 .grp1-btn{
@@ -127,15 +148,10 @@
     border: none;
 }
 
-.btn2 a span{
-    font-family: 'Open sans' ,  sans-serif;
-    font-family: 15px;
-}
-
 .grp1-img img{
-    max-width: 550px;
-    width: 100%;
-    padding-right: -300px; 
+    max-width: 520px;
+    width: 100%; 
+    margin-left: -40px;
 }
 
 .snd-grp{
@@ -151,7 +167,8 @@
     background-image: linear-gradient(180deg, #E4F7FC 0%, #B7E5F1 100%);
     max-width: 560px;
     width: 100%;
-    margin-top: -19px;
+    margin-top: -35px;
+    margin-bottom: -35px;
     margin-left: -40px;
 }
 
@@ -175,24 +192,24 @@
     line-height: 2;
     color: #4B4F58;
     margin: 0px 0px 8.5px;
+    width: 100%;
+    max-width: 480px;
 }
 
 .grp2-img img{
-    max-width: 575px;
+    max-width: 560px;
     width: 100%;
     padding-right: -150px;
 }
 
 .btn3{
-    height: 50px;
-    max-width: 200px;
+    height: 45px;
+    max-width: 190px;
     width: 100%;
-    font-size: 16px;
     padding-left: 20px;
     background-color: #000;
-    border-radius: 8px;
+    border-radius: 5px;
     border: none;
-   
 }
 
 .grp2-btn :hover{
@@ -200,16 +217,22 @@
 }
 
 .btn3 img{
-    max-width: 10px;
+   max-width: 15px;
     width: 100%;
     height: auto;
     padding-left: 10px;
+    margin-bottom: -2px;
 }
 
 .btn3 a{
     text-decoration: none;
     color: white;
     padding-bottom: 2px;
+    font-family: 'Open Sans' , sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: normal;
+    color: rgb(255, 255, 255);
 }
 .grp2-btn{
     padding-left: 50px;
@@ -231,14 +254,32 @@
         line-height: 28.9px;
         color: rgb(75, 79, 88);
     }
+    .btn1{
+        margin-right: 280px;
+    }
     .grp1-txt{
+        margin-right: -400px;
         margin-left: 300px;
+        height: 50vh;
+        width: 1600px;
+    }
+    .grp1-txt h2 p{
+        padding-left: 60px;
+    }
+    .grp1-img img{
         width: 100%;
+        padding-left: 440px;
+        max-width: 700px;
+        height: 380px;
     }
     .grp2-txt{
-        margin-right: 270px;
         width: 100%;
-        max-width: 600px;
+        max-width: 680px;
+        margin-left: -420px;
+        margin-right: 300px;
+    }
+    .grp2-txt h2{
+        padding-left: -390px;
     }
     .grp2-txt p{
         font-family: "Open Sans", sans-serif;
@@ -247,13 +288,15 @@
         line-height: 28.9px;
         color: rgb(75, 79, 88);
         padding-top: 20px;
+        padding-left: 80px;
     }
     .grp2-img{
         margin-left: 290px;
         width: 100%;
     }
     .grp2-img img{
-        max-width: 630px;
+        max-width: 570px;
         width: 100%;
+        height: 40vh;
     }
 }
