--- a/src/components/ConSection/ConSection.css
+++ b/src/components/ConSection/ConSection.css
@@ -1,4 +1,3 @@
-
 .con-sec{
     background-color: #020924;
     display: flex;
@@ -10,6 +9,12 @@
     padding-top: 60px;
     padding-right: 80px;
     padding-left: -20px;
+}
+@media(min-width: 1367px){
+    .con-sec{
+        margin-left: -110px;
+        height: 45vh;
+    }
 }
 
 .web-info{
@@ -44,6 +49,28 @@
     line-height: 1.9rem;
 }
 
+@media(min-width: 1367px){
+    .web-info{
+        height: 360px;
+        width: 470px;
+    }
+    .web-info img{
+        width: 100%;
+        max-width: fit-content;
+    }
+    .web-info p{
+        width: 100%;
+        max-width: 370px;
+        text-align: center;
+        padding-left: 50px;
+        font-family: "Open Sans", sans-serif;
+        font-size: 17px;
+        font-weight: 400;
+        line-height: 28.9px;
+        color: rgb(255, 255, 255);
+    }
+}
+
 .c-ser a{
     text-decoration: none;
     color: #ffffffb8;
@@ -68,7 +95,7 @@
     height: 0.0001px;
     margin: 0;         
     border: none;  
-    border-top: 0.025px solid #ffffffb8;
+    border-top: 1px solid #ffffffb8;
     margin-left: 40px;
     margin-bottom: 15px;
 }
@@ -101,6 +128,31 @@
     color: #fffff3;
     padding-top: 20px;
     margin-left: -110px;
+}
+
+@media(min-width:1367px){
+    .c-ser{
+        width: 470px;
+        height: 36vh;
+    }
+    .c-ser hr{
+        width: 370px;
+    }
+    .c-ser h2{
+        font-family: Roboto, sans-serif;
+        font-size: 25px;
+        font-weight: 700;
+        line-height: 25px;
+        color: rgb(255, 255, 255);
+        padding-right: 190px;
+    }
+    .c-ser a{
+        font-family: "Open Sans", sans-serif;
+        font-size: 17px;
+        font-weight: 300;
+        line-height: 17px;
+        color: rgba(255, 255, 255, 0.89);
+    }
 }
 
 .quick-links{
@@ -142,6 +194,13 @@
     font-size: 17px;
     font-family: 'Open sans', sans-serif;
     padding-left: 2px;
+}
+
+@media(min-width: 1367px){
+    .quick-links{
+        width: 420px;
+        height: 34vh;
+    }
 }
 
 .locate-us{
@@ -251,4 +310,15 @@
     display: flex;
     gap: 10px;
     padding-left: 20px;
+}
+
+@media(min-width: 1367px){
+    .locate-us{
+        width: 450px;
+        height: 38vh;
+    }
+    .loc-soci{
+        width: 100%;
+        
+    }
 }
