--- a/src/components/ConSection/ConSection.css
+++ b/src/components/ConSection/ConSection.css
@@ -10,12 +10,6 @@
     padding-right: 80px;
     padding-left: -20px;
 }
-@media(min-width: 1367px){
-    .con-sec{
-        margin-left: -110px;
-        height: 45vh;
-    }
-}
 
 .web-info{
     background-color: #1E263F;
@@ -47,28 +41,6 @@
     padding-top: 18px;
     padding-bottom: 18px;
     line-height: 1.9rem;
-}
-
-@media(min-width: 1367px){
-    .web-info{
-        height: 360px;
-        width: 470px;
-    }
-    .web-info img{
-        width: 100%;
-        max-width: fit-content;
-    }
-    .web-info p{
-        width: 100%;
-        max-width: 370px;
-        text-align: center;
-        padding-left: 50px;
-        font-family: "Open Sans", sans-serif;
-        font-size: 17px;
-        font-weight: 400;
-        line-height: 28.9px;
-        color: rgb(255, 255, 255);
-    }
 }
 
 .c-ser a{
@@ -130,31 +102,6 @@
     margin-left: -110px;
 }
 
-@media(min-width:1367px){
-    .c-ser{
-        width: 470px;
-        height: 36vh;
-    }
-    .c-ser hr{
-        width: 370px;
-    }
-    .c-ser h2{
-        font-family: Roboto, sans-serif;
-        font-size: 25px;
-        font-weight: 700;
-        line-height: 25px;
-        color: rgb(255, 255, 255);
-        padding-right: 190px;
-    }
-    .c-ser a{
-        font-family: "Open Sans", sans-serif;
-        font-size: 17px;
-        font-weight: 300;
-        line-height: 17px;
-        color: rgba(255, 255, 255, 0.89);
-    }
-}
-
 .quick-links{
     background-color: #1E263F;
     align-items: center;
@@ -194,13 +141,6 @@
     font-size: 17px;
     font-family: 'Open sans', sans-serif;
     padding-left: 2px;
-}
-
-@media(min-width: 1367px){
-    .quick-links{
-        width: 420px;
-        height: 34vh;
-    }
 }
 
 .locate-us{
@@ -312,13 +252,146 @@
     padding-left: 20px;
 }
 
-@media(min-width: 1367px){
-    .locate-us{
+@media (min-width: 1367px) {
+    .con-sec {
+        margin-left: -110px;
+        height: 45vh;
+    }
+}
+
+@media (min-width: 1367px) {
+    .web-info {
+        height: 360px;
+        width: 470px;
+    }
+    .web-info img {
+        width: 100%;
+        max-width: fit-content;
+    }
+    .web-info p {
+        width: 100%;
+        max-width: 370px;
+        text-align: center;
+        padding-left: 50px;
+        font-family: "Open Sans", sans-serif;
+        font-size: 17px;
+        font-weight: 400;
+        line-height: 28.9px;
+        color: rgb(255, 255, 255);
+    }
+}
+
+@media (min-width: 1367px) {
+    .c-ser {
+        width: 470px;
+        height: 36vh;
+    }
+    .c-ser hr {
+        width: 370px;
+    }
+    .c-ser h2 {
+        font-family: Roboto, sans-serif;
+        font-size: 25px;
+        font-weight: 700;
+        line-height: 25px;
+        color: rgb(255, 255, 255);
+        padding-right: 190px;
+    }
+    .c-ser a {
+        font-family: "Open Sans", sans-serif;
+        font-size: 17px;
+        font-weight: 300;
+        line-height: 17px;
+        color: rgba(255, 255, 255, 0.89);
+    }
+}
+
+@media (min-width: 1367px) {
+    .quick-links {
+        width: 420px;
+        height: 34vh;
+    }
+}
+
+@media (min-width: 1367px) {
+    .locate-us {
         width: 450px;
         height: 38vh;
     }
-    .loc-soci{
+    .loc-soci {
         width: 100%;
-        
+    }
+}
+
+@media (min-width: 1216px) and (max-width: 1366px) {
+    .con-sec {
+        height: 48vh;
+    }
+    .web-info {
+        max-width: 440px;
+    }
+    .c-ser {
+        max-width: 450px;
+    }
+    .quick-links {
+        max-width: 410px;
+    }
+    .locate-us {
+        max-width: 430px;
+    }
+}
+
+@media (min-width: 1093px) and (max-width: 1215px) {
+    .con-sec {
+        height: 50vh;
+    }
+    .web-info {
+        max-width: 400px;
+    }
+    .c-ser {
+        max-width: 420px;
+    }
+    .quick-links {
+        max-width: 390px;
+    }
+    .locate-us {
+        max-width: 400px;
+    }
+}
+
+@media (min-width: 1024px) and (max-width: 1092px) {
+    .con-sec {
+        height: 55vh;
+    }
+    .web-info {
+        max-width: 380px;
+    }
+    .c-ser {
+        max-width: 400px;
+    }
+    .quick-links {
+        max-width: 370px;
+    }
+    .locate-us {
+        max-width: 380px;
+    }
+}
+
+@media (min-width: 1517px) {
+    .con-sec {
+        height: 40vh;
+        margin-left: 0px;
+    }
+    .web-info {
+        max-width: 500px;
+    }
+    .c-ser {
+        max-width: 500px;
+    }
+    .quick-links {
+        max-width: 470px;
+    }
+    .locate-us {
+        max-width: 470px;
     }
 }
