--- a/src/components/Body1/Body1.css
+++ b/src/components/Body1/Body1.css
@@ -11,7 +11,7 @@
     background: none;
     max-width: 100%;
     max-height: 40%;
-    box-sizing: bor;
+    box-sizing: border-box;
     
 }
 
@@ -147,6 +147,4 @@
         font-family: "Open Sans", sans-serif;
     }
 }
-
-
 
