--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -152,3 +152,30 @@
         padding-right: 4vw;
     }
 }
+
+@media (min-width: 1821px) {
+    .hero {
+      height: 67vh;
+    }
+  
+    .hero-content h1 {
+      font-family: Roboto, sans-serif;
+      font-size: 60px;
+      font-weight: 700;
+      line-height: 66px;
+      color: rgba(255, 255, 255, 0.98);
+      width: 1000px;
+    }
+    .hero-content p{
+        font-family: "Open Sans", sans-serif;
+        font-size: 17px;
+        font-weight: 400;
+        line-height: 28.9px;
+        color: rgb(255, 255, 255);
+    }
+    .cta-button2 {
+        padding: 20px 25px;
+        font-size: 17px;
+    }
+  }
+  
