--- a/src/components/MainHeader/MainHeader.css
+++ b/src/components/MainHeader/MainHeader.css
@@ -662,3 +662,37 @@ body {
         width: 220px;
     }
 }
+
+@media (min-width: 1821px) {
+  .logo img {
+    margin-left: -180px;
+  }
+
+  .menu {
+    margin-right: -195px;
+  }
+
+  .dropdown-container {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background: #f8f8f8;
+    padding: 10px;
+    border-radius: 4px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    z-index: 10;
+  }
+
+  .nav-item:hover .dropdown-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .nav-item:hover .mega-menu {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    width: 650px;
+  }
+}
