--- a/src/components/TopHeader/TopHeader.css
+++ b/src/components/TopHeader/TopHeader.css
@@ -171,4 +171,20 @@
   }
 }
 
+@media (min-width: 1821px) {
+    .topheader {
+      display: block;
+      width: 100%;
+    }
+    .social-media {
+      padding-left: 80px;
+      margin-left: -250px;
+    }
+    .c-info {
+      margin-left: 350px;
+      margin-right: -200px;
+    }
+  }
+  
+
   
