--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Open+Sans:wght@300;400;700&display=swap');
+
+body {
+    font-family: 'Roboto', 'Open Sans', sans-serif;
+}
 .App {
   text-align: center;
 }
