--- a/src/components/Body1/Body1.css
+++ b/src/components/Body1/Body1.css
@@ -9,7 +9,7 @@
     flex-wrap: wrap;
     overflow: visible;
     background: none;
-    max-width: 100%;
+    width: 100vw;
     max-height: 40%;
     box-sizing: border-box;
     
@@ -25,14 +25,14 @@
     background-color: #FFFFFF;
     background: url('https://speedlinkng.com/wp-content/uploads/2022/09/white-background.jpg') no-repeat center center;
     background-size: cover;
-    filter: blur(0.1rem); 
+    filter: blur(0.3rem); 
     z-index: -1; 
 }
 
 .text-section {
     flex: 1;
     max-width: 600px;
-    width: 100%;
+    width: 100vw;
     margin-left: 1.5cm;
     font-family: 'Open Sans', sans-serif;
     position: relative;
@@ -42,7 +42,7 @@
 
 .text-section h6 {
     color: #EC1C24;
-    padding-left: 10px;
+    padding-right: 120px;
     letter-spacing: 2.1px;
     line-height: 1.7;
     display: block;
@@ -55,11 +55,11 @@
     color: #020D39;
     padding-left: 10px;
     line-height: 1.1;
-    word-wrap: break-word;
     font-size: 52.5px;
     margin-top: 35px;
     font-weight: bold;
-    width: 100%;
+    width: 38.56vw;
+    text-align: left;
 }
 
 .text-section p {
@@ -72,6 +72,7 @@
     font-family: "Open sans",sans-serif;
     line-height: 1.6;
     width: 580px;
+    text-align: left;
 }
 
 .text-section img{
@@ -117,8 +118,8 @@
 
 .image-section {
     flex: 1;
-    max-width: 532px;
-    margin-left: 50px;
+    max-width: 500px;
+    margin-left: 65px;
     border: none;
     display: inline-block;
     vertical-align: middle;
@@ -127,16 +128,14 @@
     padding: 10px;
     border-style: solid;
     border-width: 0px 0px 3px 0px;
-    border-color: #EC7D81;
     border-radius: 40px 10px 100px 10px;
     height: auto;
     width: 100%;
     border: none;
     box-shadow: none;
     overflow-clip-margin: content-box;
-    overflow: clip;
-    text-align: center;
 }
+
 
 @media(min-width: 1517px){
     .image-section{
@@ -148,3 +147,66 @@
     }
 }
 
+@media (min-width: 1821px) {
+    .body1 {
+        display: flex;
+        justify-content: center;
+        gap: 50px; 
+        padding: 120px 10%;
+        max-width: 100%;
+        height: 73vh;
+    }
+
+    .text-section {
+        flex: none;
+        width: 600px;
+        margin-left: -110px;
+    }
+
+    .text-section h6{
+        padding-right: 170px;
+    }
+
+    .text-section h1 {
+        font-family: Roboto, sans-serif;
+        font-size: 57px;
+        font-weight: 700;
+        line-height: 62.7px;
+        color: rgb(2, 13, 57);
+    }
+
+    .text-section p{
+        font-family: "Open Sans", sans-serif;
+        font-size: 17px;
+        font-weight: 400;
+        line-height: 35px;
+        color: rgb(75, 79, 88);
+        width: 30.1vw;
+        text-align: left;
+    }
+
+    .image-section {
+        flex: none;
+        width: 600px;
+        height: auto;
+        margin-right: -30px;
+        margin-left: -30px;
+        border-radius: 40px 10px 100px 10px; 
+        display: block; 
+        width: 100%;
+        padding-bottom: 0; 
+        margin-bottom: -4px;
+
+    }
+    .image-section::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%; 
+        height: 5px; 
+        background-color: #EC1C24;
+        transform: translateX(-50%); 
+    }
+    
+}
