--- a/src/components/CaseSection/CaseSection.css
+++ b/src/components/CaseSection/CaseSection.css
@@ -301,3 +301,59 @@
     }
 }
 
+@media (min-width: 1821px) {
+    .casestd-text {
+        margin-left: 240px;
+        text-align: left;
+        width: 40vw;
+    }
+
+    .btn1 {
+        margin-right: 250px;
+        width: 260px;
+        height: 65px;
+        font-size: 18px;
+    }
+
+    .first-grp {
+        width: 80vw;
+        gap: 40px;
+    }
+
+    .grp1-txt {
+        height: 55vh;
+        width: 30vw;
+        text-align: left;
+        margin-left: 170px;
+    }
+
+    .grp1-img img {
+        max-width: 750px;
+        height: auto;
+        margin-left: -50px;
+    }
+
+    .snd-grp {
+        width: 80vw;
+        margin-left: auto;
+        margin-right: auto;
+        gap: 40px;
+    }
+
+    .grp2-txt {
+        width: 45vw;
+        padding: 40px;
+    }
+
+    .grp2-img img {
+        max-width: 750px;
+        height: auto;
+    }
+
+    .btn2,
+    .btn3 {
+        width: 220px;
+        height: 50px;
+        font-size: 16px;
+    }
+}
