--- a/src/components/IndSection/IndSection.css
+++ b/src/components/IndSection/IndSection.css
@@ -129,3 +129,27 @@
         width: 100%;
     }
 }
+
+@media (min-width: 1821px) {
+    .text {
+        margin-left: 240px;
+        text-align: left;
+    }
+
+    .ind-images {
+        width: 75vw;
+        margin-left: 80px;
+    }
+
+    .ind-images .img1, .ind-images .img2, .ind-images .img3, 
+    .ind-images .img4, .ind-images .img5, .ind-images .img6, 
+    .ind-images .img7, .ind-images .img8, .ind-images .img9, 
+    .ind-images .img10 {
+        height: 200px;
+        border-radius: 15px;
+        background-color: white;
+        box-shadow: 0 12px 30px rgba(0, 0, 0, 0.1);
+        max-width: calc(100% - 1149px);
+        width: 100%;
+    }
+}
