--- a/src/components/CaseSection/CaseSection.css
+++ b/src/components/CaseSection/CaseSection.css
@@ -329,8 +329,8 @@
 
     .grp1-img img {
         max-width: 750px;
-        height: auto;
-        margin-left: -50px;
+        height: 360px;
+        margin-left: -190px;
     }
 
     .snd-grp {
