--- a/src/components/Body1/Body1.css
+++ b/src/components/Body1/Body1.css
@@ -173,6 +173,7 @@
         font-weight: 700;
         line-height: 62.7px;
         color: rgb(2, 13, 57);
+        width: 550px
     }
 
     .text-section p{
