--- a/src/components/CaseSection/CaseSection.css
+++ b/src/components/CaseSection/CaseSection.css
@@ -12,6 +12,7 @@
     font-family: 'Roboto', sans-serif;
     color: #000;
     padding-left: 125px;
+    text-align: left;
 }
 
 .casestd-text p{
@@ -24,6 +25,7 @@
     line-height: 28.9px;
     color: rgb(75, 79, 88);
     margin-top: -20px;
+    text-align: left;
 }
 
 .btn{
@@ -81,6 +83,7 @@
     margin-top: -35px;
     margin-bottom: -35px;
     margin-left: 10px;
+    align-items: left;
 }
 
 .grp1-txt h2{
@@ -93,6 +96,7 @@
     font-weight: 700;
     line-height: 40px;
     color: rgb(34, 34, 34);
+    text-align: left;
 }
 
 .grp1-txt p{
@@ -104,6 +108,7 @@
     color: #4B4F58;
     width: 100%;
     max-width: 440px;
+    text-align: left;
 }
 
 .btn2{
@@ -114,7 +119,7 @@
     background-color: #000;
     border-radius: 5px;
     border: none;
-   
+    margin-left: -320px; 
 }
 
 .grp1-btn :hover{
@@ -180,7 +185,7 @@
     padding-left: 50px;
     padding-top: 40px;
     margin-bottom: 5px;
-
+    text-align: left;
 }
 
 .grp2-txt p{
@@ -194,6 +199,7 @@
     margin: 0px 0px 8.5px;
     width: 100%;
     max-width: 480px;
+    text-align: left;
 }
 
 .grp2-img img{
@@ -210,6 +216,7 @@
     background-color: #000;
     border-radius: 5px;
     border: none;
+    margin-left: -320px;
 }
 
 .grp2-btn :hover{
@@ -317,37 +324,55 @@
 
     .first-grp {
         width: 80vw;
-        gap: 40px;
     }
 
     .grp1-txt {
         height: 55vh;
         width: 30vw;
         text-align: left;
-        margin-left: 170px;
+        margin-left: 120px;
     }
 
     .grp1-img img {
-        max-width: 750px;
+        max-width: 600px;
+        width: 100%;
         height: 360px;
-        margin-left: -190px;
+        margin-left: -260px;
+    }
+
+    .grp1-btn{
+        margin-left: 310px;
     }
 
     .snd-grp {
         width: 80vw;
         margin-left: auto;
         margin-right: auto;
-        gap: 40px;
     }
 
     .grp2-txt {
-        width: 45vw;
-        padding: 40px;
+        height: 55vh;
+        width: 100%;
+        max-width: 600px;
+        text-align: left;
+        margin-right: 130px;
+        
+    }
+
+    .grp2-txt p{
+        margin-left: -30px;
     }
 
     .grp2-img img {
-        max-width: 750px;
+        max-width: 32vw;
+        width: 100%;
         height: auto;
+        margin-left: -120px;
+        margin-right: 430px;
+    }
+
+    .grp2-btn{
+        margin-left: 310px;
     }
 
     .btn2,
