--- a/src/components/IndSection/IndSection.css
+++ b/src/components/IndSection/IndSection.css
@@ -19,11 +19,18 @@
     font-size: 40px;
     font-family: 'Roboto', sans-serif;
     color: #020F42;
+    text-align: left;
+    font-weight: 700;
+    line-height: 40px; 
 }
 
 .text p{
-    font-family: 'Open sans', sans-serif;
+    text-align: left;
+    font-family: "Open Sans", sans-serif;
     font-size: 17px;
+    font-weight: 400;
+    line-height: 28.9px;
+    color: rgb(75, 79, 88);
 }
 
 .ind-images .img1, .ind-images .img2, .ind-images .img3, 
@@ -138,7 +145,7 @@
 
     .ind-images {
         width: 75vw;
-        margin-left: 80px;
+        margin-left: 45px;
     }
 
     .ind-images .img1, .ind-images .img2, .ind-images .img3, 
@@ -149,7 +156,7 @@
         border-radius: 15px;
         background-color: white;
         box-shadow: 0 12px 30px rgba(0, 0, 0, 0.1);
-        max-width: calc(100% - 1149px);
+        max-width: calc(100% - 1159px);
         width: 100%;
     }
 }
